<resources>
    <string name="app_name">About Me</string>
    <string name="name">Thoi Duong</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="done">done</string>
    <string name="bio">
        s your professional bio as good as it can be?
        \n
        In this article, we have seven real bio examples you should definitely compare yours to -- and a series of free bio templates you can use to perfect it.
        \n
        Most people don\'t think about their professional bio until they\'re suddenly asked to "shoot one over via email,"
        and have approximately one afternoon to come up with it. That\'s when we scramble, and our bio ends up reading like this:
        \n
        Rodney Erickson is a content marketing professional at HubSpot, an inbound marketing and sales platform that helps
        companies attract visitors, convert leads, and close customers. Previously, Rodney worked as a marketing manager for a tech software startup.
        He graduated with honors from Columbia University with a dual degree in Business Administration and Creative Writing."
        Woof, that was dull. Are you still with me? I swear, not even adding a tidbit about his cats would liven that bio up.
    </string>
    <string name="nick_name_hint">your nick name here</string>
</resources>
