<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <data>
        <variable
                name="myName"
                type="com.thoi.duong.aboutme.data.MyName"
        />
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:id="@+id/own_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={myName.name}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/name"
                style="@style/NameStyle"
        />
        <EditText
                android:id="@+id/etxt_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/own_nickname"
                android:inputType="text"
                android:hint="@string/nick_name_hint"
        />
        <Button
                android:id="@+id/btn_enter_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_nickname"
                android:text="@string/done"
        />
        <ImageView
                android:id="@+id/star_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/btn_star_big_on"
                app:layout_constraintTop_toBottomOf="@+id/btn_enter_nickname"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/yellow_star"
                android:layout_marginTop="@dimen/layout_margin"
        />
        <TextView
                android:id="@+id/txt_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/star_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:visibility="gone"
                style="@style/NameStyle"
                android:paddingRight="@dimen/padding"
                android:paddingLeft="@dimen/padding"
                android:text="@={myName.nickname}"
        />
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_nickname"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    style="@style/NameStyle"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>